spacing issues

--- a/assignments/A_3/css/style.css
+++ b/assignments/A_3/css/style.css
@@ -22,6 +22,7 @@ header{
     text-align: center;
     display: flex;
     flex-flow: column;
+    padding-top: 2rem;
 }
 
 header h1{
@@ -31,7 +32,7 @@ header h1{
 footer{
     background-color: var(--poly-green);
 
-    padding: .5rem;
+    padding: 1.5rem;
     height: auto;
     text-align: center;
     
@@ -136,7 +137,7 @@ main section{
     flex-flow: column;
     align-items: center;
     gap: 1rem;
-    height: 40%;
+    height: auto;
 }
 
 main section div{
